--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,17 @@
         <junit5.version>5.4.2</junit5.version>
         <postgresql.version>42.2.6</postgresql.version>
         <mockito.version>2.28.2</mockito.version>
-        <d1libclient.version>2.4.0</d1libclient.version>
+        <d1libclient.version>2.3.1</d1libclient.version>
     </properties>
 <dependencies>
     <dependency>
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-core</artifactId>
+        <version>${dropwizard.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>io.dropwizard</groupId>
+        <artifactId>dropwizard-testing</artifactId>
         <version>${dropwizard.version}</version>
     </dependency>
     <dependency>
