--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-testing</artifactId>
         <version>${dropwizard.version}</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.postgresql</groupId>
@@ -39,6 +40,7 @@
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>${mockito.version}</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.dataone</groupId>
