--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,16 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <dropwizard.version>2.0.0-rc3</dropwizard.version>
-        <junit5.version>5.4.2</junit5.version>
+        <junit.platform.version>1.4.2</junit.platform.version>
+        <junit.jupiter.version>5.4.2</junit.jupiter.version>
+        <junit.vintage.version>5.4.2</junit.vintage.version>
         <postgresql.version>42.2.6</postgresql.version>
+        <embedded-pg.version>0.13.1</embedded-pg.version>
+        <flyway.version>5.2.4</flyway.version>
         <mockito.version>2.28.2</mockito.version>
         <d1libclient.version>2.3.1</d1libclient.version>
+        <maven.surefire.version>2.22.0</maven.surefire.version>
+        <maven.failsafe.version>2.22.0</maven.failsafe.version>
     </properties>
 <dependencies>
     <dependency>
@@ -26,15 +32,26 @@
         <version>${dropwizard.version}</version>
         <scope>test</scope>
     </dependency>
+   <dependency>
+        <groupId>io.dropwizard</groupId>
+        <artifactId>dropwizard-jdbi3</artifactId>
+        <version>${dropwizard.version}</version>
+    </dependency>
     <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${postgresql.version}</version>
     </dependency>
     <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-jdbi3</artifactId>
-        <version>${dropwizard.version}</version>
+        <groupId>com.opentable.components</groupId>
+        <artifactId>otj-pg-embedded</artifactId>
+        <version>${embedded-pg.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>${flyway.version}</version>
     </dependency>
     <dependency>
         <groupId>org.mockito</groupId>
@@ -54,9 +71,22 @@
         </exclusions>
     </dependency>
     <dependency>
+        <groupId>org.junit.platform</groupId>
+        <artifactId>junit-platform-launcher</artifactId>
+        <version>${junit.platform.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
-        <version>${junit5.version}</version>
+        <version>${junit.jupiter.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
+        <version>${junit.vintage.version}</version>
+        <scope>test</scope>
     </dependency>
 </dependencies>
 <repositories>
@@ -71,4 +101,65 @@
         </snapshots>
     </repository>
 </repositories>
+<build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.version}</version>
+            <configuration>
+                <includes>
+                    <include>**/Test*.java</include>
+                    <include>**/*Test.java</include>
+                    <include>**/*Tests.java</include>
+                    <include>**/*TestCase.java</include>
+                </includes>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-launcher</artifactId>
+                    <version>${junit.platform.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter</artifactId>
+                    <version>${junit.jupiter.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                    <version>${junit.vintage.version}</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+        <plugin>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>${maven.failsafe.version}</version>
+        </plugin>
+        <plugin>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-maven-plugin</artifactId>
+            <version>${flyway.version}</version>
+            <!--<configuration>-->
+                <!--<url>jdbc:postgresql:bookkeeper</url>-->
+                <!--<user>bookkeepper</user>-->
+            <!--</configuration>-->
+            <dependencies>
+                <dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <version>${postgresql.version}</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>8</source>
+                <target>8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
