--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <artifactId>bookkeeper</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <dropwizard.version>2.0.0-rc10</dropwizard.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <dropwizard.version>2.0.0</dropwizard.version>
         <junit.platform.version>1.4.2</junit.platform.version>
         <junit.jupiter.version>5.4.2</junit.jupiter.version>
         <junit.vintage.version>5.4.2</junit.vintage.version>
@@ -19,6 +20,9 @@
         <d1libclient.version>2.3.1</d1libclient.version>
         <maven.surefire.version>2.22.0</maven.surefire.version>
         <maven.failsafe.version>2.22.0</maven.failsafe.version>
+        <maven.shade.version>3.2.1</maven.shade.version>
+        <maven.jar.version>3.1.2</maven.jar.version>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
     </properties>
 <dependencies>
     <dependency>
@@ -140,10 +144,6 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-maven-plugin</artifactId>
             <version>${flyway.version}</version>
-            <!--<configuration>-->
-                <!--<url>jdbc:postgresql:bookkeeper</url>-->
-                <!--<user>bookkeepper</user>-->
-            <!--</configuration>-->
             <dependencies>
                 <dependency>
                     <groupId>org.postgresql</groupId>
@@ -155,9 +155,53 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven.compiler.version}</version>
             <configuration>
                 <source>8</source>
                 <target>8</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>${maven.shade.version}</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <createDependencyReducedPom>true</createDependencyReducedPom>
+                <filters>
+                    <filter>
+                        <artifact>*:*</artifact>
+                        <excludes>
+                            <exclude>META-INF/*.SF</exclude>
+                            <exclude>META-INF/*.DSA</exclude>
+                            <exclude>META-INF/*.RSA</exclude>
+                        </excludes>
+                    </filter>
+                </filters>
+                <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <mainClass>org.dataone.bookkeeper.Bookkeeper</mainClass>
+                    </transformer>
+                </transformers>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>${maven.jar.version}</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                    </manifest>
+                </archive>
             </configuration>
         </plugin>
     </plugins>
