--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <maven.shade.version>3.2.1</maven.shade.version>
         <maven.jar.version>3.1.2</maven.jar.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
+        <nimbus.version>7.8</nimbus.version>
     </properties>
 <dependencies>
     <dependency>
@@ -39,6 +40,11 @@
    <dependency>
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-jdbi3</artifactId>
+        <version>${dropwizard.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>io.dropwizard</groupId>
+        <artifactId>dropwizard-auth</artifactId>
         <version>${dropwizard.version}</version>
     </dependency>
     <dependency>
@@ -91,6 +97,11 @@
         <artifactId>junit-vintage-engine</artifactId>
         <version>${junit.vintage.version}</version>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.nimbusds</groupId>
+        <artifactId>nimbus-jose-jwt</artifactId>
+        <version>${nimbus.version}</version>
     </dependency>
 </dependencies>
 <repositories>
