--- a/bookkeeper.yml
+++ b/bookkeeper.yml
@@ -45,3 +45,13 @@ database:
 
   # the minimum amount of time an connection must sit idle in the pool before it is eligible for eviction
   minIdleTime: 1 minute
+
+# DataONE Service API configuration
+dataone:
+  # The Coordinating Node base URL (no trailing slash)
+  cnBaseUrl: "https://cn.dataone.org/cn"
+
+  # The list of admin subjects with all CRUD permissions
+  adminSubjects:
+    - "CN=urn:node:CN,DC=dataone,DC=org"
+    - "http://orcid.org/0000-0002-8121-2341"
