Add the authentication cache and logging configuration settings.

--- a/bookkeeper.yml
+++ b/bookkeeper.yml
@@ -5,12 +5,18 @@ server:
 
 # Logging configuration
 logging:
-  level: DEBUG
+  level: ERROR
   appenders:
     - type: console
+      layout:
+        type: json
+  loggers:
+    "org.dataone": DEBUG
+    # "org.apache.http.impl.conn.PoolingHttpClientConnectionManager": ERROR
+    # "org.dataone.client.utils.HttpConnectionMonitorService": ERROR
 
 # Caching policy for authenticated principals
-authenticationCachePolicy: maximumSize=1000, expireAfterAccess=10m
+authenticationCachePolicy: "maximumSize=1000, expireAfterAccess=10m"
 
 # PostgreSQL database configuration
 database:
@@ -58,6 +64,7 @@ dataone:
   # The list of admin subjects with all CRUD permissions
   adminSubjects:
     - "CN=urn:node:CN,DC=dataone,DC=org"
+    - "http://orcid.org/0000-0002-8121-2341"
 
   # The default trial period in days
   trialDurationDays: 180
