--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,17 @@
         <maven.jar.version>3.1.2</maven.jar.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <nimbus.version>7.9</nimbus.version>
+        <client.artifact.id>bookkeeper-client</client.artifact.id>
     </properties>
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>jenkins.dataone.org</id>
+            <name>DataONE</name>
+            <url>${url}</url>
+            <layout>default</layout>
+        </repository>
+    </distributionManagement>
     <dependencies>
         <dependency>
             <groupId>io.dropwizard</groupId>
@@ -232,11 +242,36 @@
                         <phase>install</phase>
                         <configuration>
                             <groupId>org.dataone</groupId>
-                            <artifactId>bookkeeper-client</artifactId>
+                            <artifactId>${client.artifact.id}</artifactId>
                             <file>target/original-bookkeeper-${version}.jar</file>
+                            <version>${version}</version>
                             <generatePom>false</generatePom>
                             <pomFile>pom.xml</pomFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <executions>
+                    <execution>
+                        <id>deploy-file</id>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                        <configuration>
+                            <url>${url}</url>
+                            <groupId>org.dataone</groupId>
+                            <artifactId>${client.artifact.id}</artifactId>
+                            <file>target/original-bookkeeper-${version}.jar</file>
                             <version>${version}</version>
+                            <generatePom>false</generatePom>
+                            <pomFile>pom.xml</pomFile>
+                            <packaging>jar</packaging>
+                            <repositoryId>jenkins.dataone.org</repositoryId>
                         </configuration>
                     </execution>
                 </executions>
