--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <maven.shade.version>3.2.1</maven.shade.version>
         <maven.jar.version>3.1.2</maven.jar.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.install.version>3.0.0-M1</maven.install.version>
+        <maven.deploy.version>3.0.0-M1</maven.deploy.version>
         <nimbus.version>7.9</nimbus.version>
         <client.artifact.id>bookkeeper-client</client.artifact.id>
         <unshaded.jar.file>target/original-bookkeeper-${version}.jar</unshaded.jar.file>
@@ -234,7 +236,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>${maven.install.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -255,7 +257,7 @@
              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
+                <version>${maven.deploy.version}</version>
                 <executions>
                     <execution>
                         <id>deploy-file</id>
