Fix minor build warnings: use ${project.version} instead of ${version} etc.

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <maven.deploy.version>3.0.0-M1</maven.deploy.version>
         <nimbus.version>7.9</nimbus.version>
         <client.artifact.id>bookkeeper-client</client.artifact.id>
-        <unshaded.jar.file>target/original-bookkeeper-${version}.jar</unshaded.jar.file>
+        <unshaded.jar.file>target/original-bookkeeper-${project.version}.jar</unshaded.jar.file>
     </properties>
     <distributionManagement>
         <repository>
@@ -244,10 +244,10 @@
                         </goals>
                         <phase>install</phase>
                         <configuration>
-                            <groupId>${groupId}</groupId>
+                            <groupId>${project.groupId}</groupId>
                             <artifactId>${client.artifact.id}</artifactId>
                             <file>${unshaded.jar.file}</file>
-                            <version>${version}</version>
+                            <version>${project.version}</version>
                             <generatePom>false</generatePom>
                             <pomFile>pom.xml</pomFile>
                         </configuration>
@@ -267,10 +267,10 @@
                         <phase>deploy</phase>
                         <configuration>
                             <url>${url}</url>
-                            <groupId>${groupId}</groupId>
+                            <groupId>${project.groupId}</groupId>
                             <artifactId>${client.artifact.id}</artifactId>
                             <file>${unshaded.jar.file}</file>
-                            <version>${version}</version>
+                            <version>${project.version}</version>
                             <generatePom>false</generatePom>
                             <pomFile>pom.xml</pomFile>
                             <packaging>jar</packaging>
