--- a/bookkeeper.yml
+++ b/bookkeeper.yml
@@ -8,12 +8,15 @@ logging:
   level: ERROR
   appenders:
     - type: console
-      layout:
-        type: json
+      threshold: ALL
+      queueSize: 512
+      target: stdout
+      logFormat: "%-5p [%d{ISO8601,UTC}] %c: %m%n%rEx"
   loggers:
     "org.dataone": DEBUG
-    # "org.apache.http.impl.conn.PoolingHttpClientConnectionManager": ERROR
-    # "org.dataone.client.utils.HttpConnectionMonitorService": ERROR
+    "io.dropwizard": DEBUG
+    "org.apache.http.impl.conn.PoolingHttpClientConnectionManager": ERROR
+    "org.dataone.client.utils.HttpConnectionMonitorService": ERROR
 
 # Caching policy for authenticated principals
 authenticationCachePolicy: "maximumSize=1000, expireAfterAccess=10m"
@@ -28,7 +31,7 @@ database:
 
   # Connect with database username and password
   user: <user goes here>
-  password: <password goes here> 
+  password: <password goes here>
 
   # JDBC driver properties
   properties:
