Set the docker tag to 0.3.0 to push a new image to docker.io.

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <io.fabric8.version>0.30.0</io.fabric8.version>
         <!-- <docker.registry>docker.io</docker.registry> -->
         <docker.repo>d1bookkeeper</docker.repo>
-        <docker.tag>0.1.0dev</docker.tag>
+        <docker.tag>0.3.0</docker.tag>
     </properties>
     <distributionManagement>
         <repository>
