Upgrade to bookkeeper-api 1.0.0.
refs https://github.com/DataONEorg/bookkeeper/issues/71

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <!-- <docker.registry>docker.io</docker.registry> -->
         <docker.repo>d1bookkeeper</docker.repo>
         <docker.tag>0.3.0</docker.tag>
-        <bookkeeper-api.version>1.0-SNAPSHOT</bookkeeper-api.version>
+        <bookkeeper-api.version>1.0.0</bookkeeper-api.version>
     </properties>
     <distributionManagement>
         <repository>
