Began config for postgres under helm.
Current helm config postgres.yaml is bare bones and does not fully
use the values.yaml file as it should. Still trying to determine the
configuration used previously, and get those moved into either ConfigMap
or Secret objects. pg currently does not start because the secret is
missing in dev-k8s. Need to check database name, user, and host as well.

--- a/helm/config/bookkeeper.yml
+++ b/helm/config/bookkeeper.yml
@@ -69,8 +69,9 @@ dataone:
   # The list of admin subjects with all CRUD permissions
   adminSubjects:
     - "CN=urn:node:CN,DC=dataone,DC=org"
-    - "http://orcid.org/0000-0002-8121-2341"
-    - "http://orcid.org/0000-0002-2192-403X"
+    - "http://orcid.org/0000-0003-0077-4738" # Matt Jones
+    - "http://orcid.org/0000-0002-8121-2341" # Christopher Jones
+    - "http://orcid.org/0000-0002-2192-403X" # Peter Slaughter
 
   bookkeeperAdminSubjects:
     - "CN=urn:node:CN,DC=dataone,DC=org"
