--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -2,11 +2,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "bookkeeper.fullname" . }}
+  name: {{ .Release.Name }}-configmap
   labels:
     {{- include "bookkeeper.labels" . | nindent 4 }}
 data:
-  database: bookkeeper
+  database: {{ .Values.postgres.dbname }}
+  POSTGRES_HOST: {{ .Values.postgres.host }}
+  POSTGRES_PORT: {{ .Values.postgres.port | quote }}
+  POSTGRES_USER: {{ .Values.postgres.user }}
 ---
 apiVersion: v1
 kind: ConfigMap
