Updated configmap to use `tpl` to substitute values in config files.
The bookkeeper.yml file can now get values from values.yaml which
are substituted using the template syntax.  Still need to figure out how
to pass in the secret that way.

Also committed the postgres.yaml config that I forgot last time.

This continues work on issue #66.

--- a/helm/config/bookkeeper.yml
+++ b/helm/config/bookkeeper.yml
@@ -30,8 +30,8 @@ database:
   # url: jdbc:postgresql://postgres.bookkeeper.svc.cluster.local:5432/bookkeeper
 
   # Connect with database username and password
-  user: <user goes here>
-  password: <password goes here>
+  user: {{ .Values.postgres.user }}
+  password: <password goes here> # This is in a Secret, so can't get it from .Values.
 
   # JDBC driver properties
   properties:
