--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -53,9 +53,9 @@ spec:
           volumeMounts:
             - name: bookkeeper-volume
               mountPath: "/opt/local"
-            - mountPath: /opt/local/bookkeeper/bookkeeper.yml
+            - name: {{ .Release.Name }}-config-volume
+              mountPath: /opt/local/bookkeeper/bookkeeper.yml
               subPath: bookkeeper.yml
-              name: {{ .Release.Name }}-config-volume
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
