Reconfigure postgres to create its own DB on startup.
Added additional env vars.

--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -8,6 +8,7 @@ metadata:
 data:
   database: {{ .Values.postgres.dbname }}
   POSTGRES_HOST: {{ .Values.postgres.host }}
+  PGDATA: {{ .Values.postgres.pgdata }}
   POSTGRES_PORT: {{ .Values.postgres.port | quote }}
   POSTGRES_USER: {{ .Values.postgres.user }}
 ---
