--- a/helm/templates/postgres.yaml
+++ b/helm/templates/postgres.yaml
@@ -17,21 +17,29 @@ spec:
       containers:
       - name: postgres
         image: docker.io/postgres:11-alpine
-        command: [ "su", "-", "postgres", "-c", "postgres -D /opt/local/bookkeeper/postgresql/data" ]
+        #command: [ "su", "-", "postgres", "-c", "postgres -D /opt/local/bookkeeper/postgresql/data" ]
         ports:
         - name: postgres
           containerPort: 5432
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: bookkeeper-volume
-          mountPath: "/opt/local"
+          mountPath: "/opt/local/bookkeeper/postgresql/data"
           readOnly: false
+        - name: {{ .Release.Name }}-config-volume
+          mountPath: /docker-entrypoint-initdb.d/initdb.sh
+          subPath: initdb.sh
         env:
         - name: POSTGRES_HOST
           valueFrom:
             configMapKeyRef:
               name: {{ .Release.Name }}-configmap
               key: POSTGRES_HOST
+        - name: PGDATA
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Release.Name }}-configmap
+              key: PGDATA
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -42,11 +50,25 @@ spec:
             configMapKeyRef:
               name: {{ .Release.Name }}-configmap
               key: POSTGRES_USER
+        - name: POSTGRES_DB
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Release.Name }}-configmap
+              key: database
       restartPolicy: Always
       volumes:
+      {{- if and .Values.persistence.enabled .Values.persistence.existingClaimName }}
       - name: bookkeeper-volume
         persistentVolumeClaim:
-          claimName: bookkeeper-pvc
+          claimName: {{ .Values.persistence.existingClaimName }}
+      {{- else }}
+      - name: bookkeeper-volume
+        emptyDir: {}
+      {{- end }}
+      - name: {{ .Release.Name }}-config-volume
+        configMap:
+          name: {{ .Release.Name }}-configfiles
+          defaultMode: 0755
 
 ---
 
