--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -17,6 +17,13 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   #tag: ""
 
+flyway:
+  image:
+    repository: flyway/flyway
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "8.5.10"
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
