Moved database DDL files to helm configuration.
Now the flyway database migration is performed during the initContainer
stage after postgres is up and before bookeeper is brought up.

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -23,6 +23,8 @@ flyway:
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
     tag: "8.5.10"
+  configpath: /opt/local/bookkeeper/flyway.conf
+  dbpath: /opt/local/bookkeeper/db
 
 imagePullSecrets: []
 nameOverride: ""
