--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -20,3 +20,12 @@ metadata:
     {{- include "bookkeeper.labels" . | nindent 4 }}
 data:
 {{ (tpl (.Files.Glob "config/*").AsConfig . ) | indent 4 }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Release.Name }}-db-files
+  labels:
+    {{- include "bookkeeper.labels" . | nindent 4 }}
+data:
+{{ (tpl (.Files.Glob "db/migrations/*").AsConfig . ) | indent 4 }}
