--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -25,6 +25,10 @@ spec:
         configMap:
           name: {{ .Release.Name }}-configfiles
           defaultMode: 0644
+      - name: {{ .Release.Name }}-db-files-volume
+        configMap:
+          name: {{ .Release.Name }}-db-files
+          defaultMode: 0644
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -40,12 +44,14 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.flyway.image.repository }}:{{ .Values.flyway.image.tag | default .Chart.AppVersion }}"
-          command: ['sh', '-c', 'set -x; cat /opt/local/bookkeeper/flyway.conf; flyway -password=${POSTGRES_PASSWORD} -configFiles=/opt/local/bookkeeper/flyway.conf info']
+          command: ['sh', '-c', 'cat {{ .Values.flyway.configpath }}; ls {{ .Values.flyway.dbpath }}/migrations; flyway -password=${POSTGRES_PASSWORD} -configFiles={{ .Values.flyway.configpath }} migrate']
           imagePullPolicy: {{ .Values.flyway.image.pullPolicy }}
           volumeMounts:
             - name: {{ .Release.Name }}-config-volume
-              mountPath: /opt/local/bookkeeper/flyway.conf
+              mountPath: {{ .Values.flyway.configpath }}
               subPath: flyway.conf
+            - name: {{ .Release.Name }}-db-files-volume
+              mountPath: {{ .Values.flyway.dbpath }}/migrations
           env:
           - name: POSTGRES_PASSWORD
             valueFrom:
