--- a/src/main/resources/flyway.conf
+++ b/src/main/resources/flyway.conf
@@ -1,4 +1,4 @@
 flyway.url=jdbc:postgresql://localhost:5432/bookkeeper
 flyway.user=bookkeeper
 flyway.password=<your-bookkeeper-password>
-flyway.locations=filesystem:db/migrations
+flyway.locations=filesystem:helm/db/migrations
