--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -58,6 +58,11 @@ spec:
               secretKeyRef:
                 name: postgres-credentials
                 key: password
+          - name: PAYMENT_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: payment-credentials
+                key: api_key
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
